--- a/sample-app/Cafe.Infrastructure/Cafe.Infrastructure.csproj
+++ b/sample-app/Cafe.Infrastructure/Cafe.Infrastructure.csproj
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FE7E5277-0F2B-4CC8-81B7-87AB78AF0D18}</ProjectGuid>
+    <ProjectGuid>{F403E01D-1FA6-4929-8F3E-FF913862290D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CafeTests</RootNamespace>
-    <AssemblyName>CafeTests</AssemblyName>
+    <RootNamespace>Cafe.Infrastructure</RootNamespace>
+    <AssemblyName>Cafe.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,28 +44,18 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BddTest.cs" />
+    <Compile Include="InMemoryEventStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TabTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Cafe\Cafe.csproj">
-      <Project>{93C9E435-6BF0-4A40-98FA-2BDFFF04F506}</Project>
-      <Name>Cafe</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Edument.CQRS\Edument.CQRS.csproj">
-      <Project>{D2BAB57D-225D-4F4C-9410-ED39495A8FE0}</Project>
-      <Name>Edument.CQRS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Events\Events.csproj">
-      <Project>{36635EE7-A3B5-4F39-8AF8-3625F6BBE43D}</Project>
-      <Name>Events</Name>
+    <ProjectReference Include="..\Edument.CQRS\Cafe.Core.csproj">
+      <Project>{d2bab57d-225d-4f4c-9410-ed39495a8fe0}</Project>
+      <Name>Cafe.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
