--- a/sample-app/Edument.CQRS/Cafe.Core.csproj
+++ b/sample-app/Edument.CQRS/Cafe.Core.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{36635EE7-A3B5-4F39-8AF8-3625F6BBE43D}</ProjectGuid>
+    <ProjectGuid>{D2BAB57D-225D-4F4C-9410-ED39495A8FE0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Events</RootNamespace>
-    <AssemblyName>Events</AssemblyName>
+    <RootNamespace>Cafe.Core</RootNamespace>
+    <AssemblyName>Cafe.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,26 +31,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tab\DrinksOrdered.cs" />
-    <Compile Include="Tab\DrinksServed.cs" />
-    <Compile Include="Tab\FoodOrdered.cs" />
-    <Compile Include="Tab\FoodPrepared.cs" />
-    <Compile Include="Tab\FoodServed.cs" />
-    <Compile Include="Tab\Shared.cs" />
-    <Compile Include="Tab\TabClosed.cs" />
-    <Compile Include="Tab\TabOpened.cs" />
+    <Compile Include="Aggregate.cs" />
+    <Compile Include="MessageDispatcher.cs" />
+    <Compile Include="SqlEventStore.cs" />
+    <Compile Include="IApplyEvent.cs" />
+    <Compile Include="IEventStore.cs" />
+    <Compile Include="IHandleCommand.cs" />
+    <Compile Include="ISubscribeTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
