--- a/sample-app/Events/Cafe.Events.csproj
+++ b/sample-app/Events/Cafe.Events.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{93C9E435-6BF0-4A40-98FA-2BDFFF04F506}</ProjectGuid>
+    <ProjectGuid>{36635EE7-A3B5-4F39-8AF8-3625F6BBE43D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cafe</RootNamespace>
-    <AssemblyName>Cafe</AssemblyName>
+    <RootNamespace>Cafe.Events</RootNamespace>
+    <AssemblyName>Cafe.Events</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,32 +33,17 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tab\DrinksOrdered.cs" />
+    <Compile Include="Tab\DrinksServed.cs" />
+    <Compile Include="Tab\FoodOrdered.cs" />
+    <Compile Include="Tab\FoodPrepared.cs" />
+    <Compile Include="Tab\FoodServed.cs" />
+    <Compile Include="Tab\Shared.cs" />
+    <Compile Include="Tab\TabClosed.cs" />
+    <Compile Include="Tab\TabOpened.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tab\CloseTab.cs" />
-    <Compile Include="Tab\Exceptions.cs" />
-    <Compile Include="Tab\MarkDrinksServed.cs" />
-    <Compile Include="Tab\MarkFoodPrepared.cs" />
-    <Compile Include="Tab\OpenTab.cs" />
-    <Compile Include="Tab\PlaceOrder.cs" />
-    <Compile Include="Tab\MarkFoodServed.cs" />
-    <Compile Include="Tab\TabAggregate.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Edument.CQRS\Edument.CQRS.csproj">
-      <Project>{D2BAB57D-225D-4F4C-9410-ED39495A8FE0}</Project>
-      <Name>Edument.CQRS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Events\Events.csproj">
-      <Project>{36635EE7-A3B5-4F39-8AF8-3625F6BBE43D}</Project>
-      <Name>Events</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
