--- a/sample-app/WebFrontend/Cafe.Web.csproj
+++ b/sample-app/WebFrontend/Cafe.Web.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebFrontend</RootNamespace>
-    <AssemblyName>WebFrontend</AssemblyName>
+    <RootNamespace>Cafe.Web</RootNamespace>
+    <AssemblyName>Cafe.Web</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>false</UseIISExpress>
@@ -22,6 +22,11 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,7 +48,6 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
@@ -51,13 +55,10 @@
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Routing" />
-    <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
@@ -241,21 +242,25 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CafeReadModels\CafeReadModels.csproj">
+    <ProjectReference Include="..\Cafe.Infrastructure\Cafe.Infrastructure.csproj">
+      <Project>{f403e01d-1fa6-4929-8f3e-ff913862290d}</Project>
+      <Name>Cafe.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CafeReadModels\Cafe.ReadModels.csproj">
       <Project>{6F605353-EDF1-4EC1-900C-4C55C105E24C}</Project>
-      <Name>CafeReadModels</Name>
+      <Name>Cafe.ReadModels</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Cafe\Cafe.csproj">
+    <ProjectReference Include="..\Cafe\Cafe.Commands.csproj">
       <Project>{93C9E435-6BF0-4A40-98FA-2BDFFF04F506}</Project>
-      <Name>Cafe</Name>
+      <Name>Cafe.Commands</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Edument.CQRS\Edument.CQRS.csproj">
+    <ProjectReference Include="..\Edument.CQRS\Cafe.Core.csproj">
       <Project>{D2BAB57D-225D-4F4C-9410-ED39495A8FE0}</Project>
-      <Name>Edument.CQRS</Name>
+      <Name>Cafe.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Events\Events.csproj">
+    <ProjectReference Include="..\Events\Cafe.Events.csproj">
       <Project>{36635EE7-A3B5-4F39-8AF8-3625F6BBE43D}</Project>
-      <Name>Events</Name>
+      <Name>Cafe.Events</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
